src/objects/Fair_Market_Value__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Depreciation__c</fullName>
        <formula>((Client_Program__r.Initial_Asset_Value__c- Fair_Market_Value__c)/ Client_Program__r.Initial_Asset_Value__c)/ (( Valuation_Date__c -Client_Program__r.Original_purchase_of_asset_Date__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Depreciation %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Fair Market Value</relationshipLabel>
        <relationshipName>Fair_Market_Value</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMV_Notes__c</fullName>
        <label>FMV Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Years_of_Asset_Ownership__c</fullName>
        <formula>( Valuation_Date__c -Client_Program__r.Original_purchase_of_asset_Date__c )/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of Asset Ownership</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Fair Market Value</label>
    <nameField>
        <displayFormat>FMV-{000000}</displayFormat>
        <label>Fair Market Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fair Market Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>